# xcm-workshop

node/src/: chain_spec.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  xcm_config.rs
zombienet/: template.toml
